--- a/src/adminLayout/_admin-layout.scss
+++ b/src/adminLayout/_admin-layout.scss
@@ -34,4 +34,19 @@
     padding-block: 12px;
     display: flex;
   }
+
+  .user-container {
+    .user-text {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .user {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      padding: 20px;
+      border-top: 1px solid $color-border;
+    }
+  }
 }
