--- a/src/scss/globals/_mixins.scss
+++ b/src/scss/globals/_mixins.scss
@@ -5,13 +5,13 @@ $animation-duration: 0.5s;
 $animation-timing-function: ease-in-out;
 
 @mixin max-size($width) {
-  @media screen and (max-width: $width) {
+  @media screen and (width <= $width) {
     @content;
   }
 }
 
 @mixin min-size($width) {
-  @media screen and (min-width: $width) {
+  @media screen and (width >= $width) {
     @content;
   }
 }
