--- a/src/components/tooltip/_tooltip.scss
+++ b/src/components/tooltip/_tooltip.scss
@@ -12,7 +12,7 @@
 
     .btn {
       min-height: auto;
-      font-size: rem(14px);
+      font-size: $font-medium;
       padding: 8px;
     }
   }
