--- a/src/scss/globals/_variables.scss
+++ b/src/scss/globals/_variables.scss
@@ -17,3 +17,7 @@ $padding-block-medium-px: $padding-block-medium + px;
 $padding-block-large-px: $padding-block-large + px;
 $page-width-small: rem(600px);
 $page-width-medium: rem(1000px);
+$font-small: rem(12px);
+$font-medium: rem(14px);
+$font-large: rem(24px);
+$font-xlarge: rem(48px);
