--- a/src/components/form/_form.scss
+++ b/src/components/form/_form.scss
@@ -22,7 +22,7 @@ form {
 
 .form-info {
   font-style: italic;
-  font-size: rem(12px);
+  font-size: $font-small;
   line-height: rem(18px);
   margin-block: 12px;
 }
