--- a/src/pages/home/_hero.scss
+++ b/src/pages/home/_hero.scss
@@ -48,14 +48,14 @@
   }
 
   .hero-title {
-    font-size: rem(48px);
+    font-size: $font-xlarge; // clamp
     letter-spacing: 0;
     margin-bottom: 0;
   }
 
   .hero-text {
     max-width: rem(512px);
-    font-size: rem(20px);
+    font-size: rem(20px); // clamp
     line-height: rem(32px);
 
     p {
