--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -60,19 +60,21 @@ h3 {
 }
 
 h1 {
-  font-size: rem(24px);
+  font-size: clamp(rem(20px), 2.5vw, $font-large);
   font-family: $font-secondary;
   letter-spacing: rem(3px);
   display: flex;
   align-items: center;
 
   &::after {
-    content: '';
-    display: flex;
-    margin-left: 8px;
-    border-bottom: 2px solid $color-primary;
-    border-radius: 4px;
-    width: 59px;
+    @include min-size($small) {
+      content: '';
+      display: flex;
+      margin-left: 8px;
+      border-bottom: 2px solid $color-primary;
+      border-radius: 4px;
+      width: 59px;
+    }
   }
 }
 
