--- a/src/components/fieldset/_fieldset.scss
+++ b/src/components/fieldset/_fieldset.scss
@@ -12,7 +12,7 @@
 
   legend {
     font-family: $font-primary-bold;
-    font-size: rem(16px);
+    font-size: $font-medium;
     padding: 0;
     width: 100%;
     padding-bottom: 6px;
