--- a/src/components/tooltip/_tooltip.scss
+++ b/src/components/tooltip/_tooltip.scss
@@ -12,7 +12,7 @@
 
     .btn {
       min-height: auto;
-      font-size: $font-medium;
+      font-size: $font-small;
       padding: 8px;
     }
   }
