--- a/src/components/formElements/fileInput/_file-input.scss
+++ b/src/components/formElements/fileInput/_file-input.scss
@@ -48,7 +48,7 @@
     display: flex;
     flex-direction: column;
     gap: 4px;
-    font-size: $font-small;
+    font-size: $font-mini;
   }
 
   .error-message {
