--- a/src/layout/nav/_nav.scss
+++ b/src/layout/nav/_nav.scss
@@ -47,7 +47,7 @@
     gap: 0;
 
     .nav-item {
-      font-size: rem(16px);
+      font-size: $font-medium;
       text-transform: none;
       width: 100%;
       display: flex;
