--- a/src/scss/globals/_variables.scss
+++ b/src/scss/globals/_variables.scss
@@ -17,7 +17,8 @@ $padding-block-medium-px: $padding-block-medium + px;
 $padding-block-large-px: $padding-block-large + px;
 $page-width-small: rem(600px);
 $page-width-medium: rem(1000px);
-$font-small: rem(12px);
-$font-medium: rem(14px);
+$font-mini: rem(12px);
+$font-small: rem(14px);
+$font-medium: rem(16px);
 $font-large: rem(24px);
 $font-xlarge: rem(48px);
