--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -39,7 +39,7 @@ body,
 
 body {
   margin: 0;
-  font-size: rem(14px);
+  font-size: $font-small;
   color: $color-primary;
   letter-spacing: rem(0.5px);
 }
@@ -49,14 +49,6 @@ h2 {
   margin: 0;
   font-weight: normal;
   margin-bottom: 24px;
-}
-
-h3 {
-  font-family: $font-primary-bold;
-  font-size: rem(14px);
-  font-weight: normal;
-  margin: 0;
-  margin-bottom: 4px;
 }
 
 h1 {
@@ -76,6 +68,18 @@ h1 {
       width: 59px;
     }
   }
+}
+
+h2 {
+  font-size: rem(20px);
+}
+
+h3 {
+  font-family: $font-primary-bold;
+  font-size: $font-small;
+  font-weight: normal;
+  margin: 0;
+  margin-bottom: 4px;
 }
 
 a {
