--- a/src/components/sortTable/_table.scss
+++ b/src/components/sortTable/_table.scss
@@ -58,6 +58,10 @@ table {
     .edit-controls {
       display: flex;
       gap: 12px;
+
+      @include max-size($small) {
+        flex-direction: column;
+      }
     }
   }
 
