--- a/src/pages/pageContainer/_page-container.scss
+++ b/src/pages/pageContainer/_page-container.scss
@@ -7,6 +7,12 @@
   align-items: flex-end;
   margin-bottom: 16px;
 
+  @include max-size($small) {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 4px;
+  }
+
   h1 {
     margin: 0;
   }
@@ -20,4 +26,9 @@
   box-shadow: $box-shadow;
   width: 100%;
   padding: 24px;
+
+  @include max-size($small) {
+    max-height: 100%;
+    padding: 0;
+  }
 }
