--- a/src/components/sortTable/_table.scss
+++ b/src/components/sortTable/_table.scss
@@ -74,6 +74,7 @@ table {
     background-color: $color-white;
     border-right: 1px solid $color-border;
     border-bottom: 1px solid $color-border;
+    white-space: nowrap;
     text-align: left;
 
     .btn-ghost {
@@ -94,6 +95,7 @@ table {
   th,
   td {
     padding: 4px 12px;
+    white-space: nowrap;
   }
 
   tr {
