--- a/src/components/sortTable/_table.scss
+++ b/src/components/sortTable/_table.scss
@@ -1,40 +1,35 @@
 /* stylelint-disable no-descending-specificity */
 @use '../../scss/globals' as *;
 
-$input-height: rem(38px);
+.fixed-table {
+  position: relative;
+  width: rem(300px);
+  min-width: 100%;
+  margin-bottom: 12px;
+  border: 1px solid $color-border;
 
-.table-controls {
+  @include max-size($medium) {
+    max-height: rem(400px);
+    overflow: auto;
+  }
+}
+
+.table-actions {
   display: flex;
-  justify-content: space-between;
   align-items: flex-end;
+  justify-content: space-between;
   margin-bottom: 8px;
 
-  .btn-default {
-    font-size: $font-small;
+  @include max-size($medium) {
+    flex-direction: column;
+    align-items: normal;
   }
 }
 
 table {
+  border-spacing: 0;
   border-collapse: collapse;
   width: 100%;
-
-  img {
-    max-width: rem(120px);
-    height: rem(64px);
-    object-fit: cover;
-    object-position: top;
-  }
-
-  .missing-img {
-    max-width: rem(120px);
-    height: auto;
-    padding: 8px 0;
-    margin: 0;
-
-    svg {
-      width: rem(36px);
-    }
-  }
 
   .edit-cell {
     display: flex;
@@ -65,16 +60,46 @@ table {
     }
   }
 
+  img {
+    max-width: rem(120px);
+    height: rem(64px);
+    object-fit: cover;
+    object-position: top;
+  }
+
+  .missing-img {
+    max-width: rem(120px);
+    height: auto;
+    padding: 8px 0;
+    margin: 0;
+
+    svg {
+      width: rem(36px);
+    }
+  }
+
+  tbody {
+    display: flex;
+    flex-direction: column;
+    max-height: rem(400px);
+    overflow: auto;
+
+    @include max-size($medium) {
+      display: table-row-group;
+    }
+  }
+
   th {
     background-color: $color-white;
     border-right: 1px solid $color-border;
     border-bottom: 1px solid $color-border;
+    position: sticky;
+    top: 0;
+    z-index: 2;
     white-space: nowrap;
-    text-align: left;
 
-    .btn-ghost {
-      font-weight: bold;
-      font-size: $font-small;
+    &:first-child {
+      z-index: 3;
     }
 
     &:last-child {
@@ -87,14 +112,22 @@ table {
     background-color: $color-white;
   }
 
+  /* stylelint-disable-next-line no-descending-specificity */
   th,
   td {
     padding: 4px 12px;
     white-space: nowrap;
+
+    &:first-child {
+      border-right: 1px solid $color-border;
+      position: sticky;
+      left: 0;
+      width: 800px;
+    }
   }
 
   tr {
-    @include min-size($large) {
+    @include min-size($medium) {
       display: table;
       width: 100%;
       table-layout: fixed;
@@ -103,34 +136,13 @@ table {
     &:nth-child(odd) {
       td {
         background-color: $color-background;
+
+        &.no-records-table-field {
+          background-color: $color-white;
+          border: none;
+          padding: 0;
+        }
       }
-    }
-  }
-
-  tbody {
-    display: flex;
-    flex-direction: column;
-
-    &.padding-4 {
-      td {
-        padding-block: $padding-block-small-px;
-      }
-    }
-
-    &.padding-12 {
-      td {
-        padding-block: $padding-block-medium-px;
-      }
-    }
-
-    &.padding-20 {
-      td {
-        padding-block: $padding-block-large-px;
-      }
-    }
-
-    @include max-size($large) {
-      display: table-row-group;
     }
   }
 
@@ -154,38 +166,9 @@ table {
     right: -4px;
     border: 3px solid $color-white;
   }
-}
 
-.fixed-table {
-  position: relative;
-  width: 100%;
-  margin-bottom: 12px;
-  border: 1px solid $color-border;
-
-  table {
-    th {
-      position: sticky;
-      top: 0;
-      z-index: 2;
-
-      &:first-child {
-        z-index: 3;
-      }
-    }
-
-    tbody {
-      max-height: rem(400px);
-      overflow: auto;
-    }
-
-    th,
-    td {
-      &:first-child {
-        border-right: 1px solid $color-border;
-        position: sticky;
-        left: 0;
-      }
-    }
+  .btn {
+    padding: 0;
   }
 }
 
