--- a/src/pages/product/_product-page.scss
+++ b/src/pages/product/_product-page.scss
@@ -4,9 +4,11 @@
   display: flex;
   gap: 8px;
   align-items: center;
+  white-space: nowrap;
 
-  @include max-size($medium) {
+  @include max-size($large) {
     flex-direction: column;
+    align-items: flex-start;
   }
 }
 
