--- a/src/scss/globals/_variables.scss
+++ b/src/scss/globals/_variables.scss
@@ -17,6 +17,7 @@ $padding-block-medium-px: $padding-block-medium + px;
 $padding-block-large-px: $padding-block-large + px;
 $page-width-small: rem(600px);
 $page-width-medium: rem(1000px);
+$page-width-large: rem(1400px);
 $font-mini: rem(12px);
 $font-small: rem(14px);
 $font-medium: rem(16px);
