--- a/src/components/badge/_badge.scss
+++ b/src/components/badge/_badge.scss
@@ -1,5 +1,10 @@
 @use '../../scss/globals' as *;
 
+.badge-container {
+  display: flex;
+  gap: 8px;
+}
+
 .badge {
   width: fit-content;
   border-radius: 50px;
