--- a/src/scss/_helper_classes.scss
+++ b/src/scss/_helper_classes.scss
@@ -69,15 +69,17 @@
 
 .grid {
   display: grid;
-  gap: 30px;
 
   &.two-col {
     grid-template-columns: repeat(2, 1fr);
-    align-items: center;
+
+    @include max-size($small) {
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
   }
 
   &.three-col {
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(3, 1fr);
 
     @include max-size($small) {
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
