--- a/src/pages/product/_product-page.scss
+++ b/src/pages/product/_product-page.scss
@@ -14,8 +14,9 @@
 .product-list-container {
   display: flex;
   flex-direction: column;
-  gap: 16px;
-  padding: 30px;
+  gap: 12px;
+  padding: 24px;
+  padding-bottom: 0;
 
   @include max-size($small) {
     padding: 0;
