--- a/src/pages/pageContainer/_page-container.scss
+++ b/src/pages/pageContainer/_page-container.scss
@@ -27,7 +27,7 @@
   width: 100%;
   padding: 24px;
 
-  @include max-size($small) {
+  @include max-size($medium) {
     max-height: 100%;
     padding: 12px;
   }
