--- a/src/scss/_admin-card.scss
+++ b/src/scss/_admin-card.scss
@@ -15,6 +15,10 @@
     grid-template-columns: 1fr 1fr 0.8fr;
 
     @include max-size($small) {
+      grid-template-columns: repeat(auto-fit, minmax(335px, 1fr));
+    }
+
+    @include max-size($mini) {
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     }
   }
@@ -39,6 +43,15 @@
     margin: 0;
     padding: 8px;
     padding-bottom: 0;
+
+    @include max-size($small) {
+      padding: 0;
+      padding-top: 12px;
+    }
+
+    @media (1000px < width < 800px) {
+      grid-column: span 3;
+    }
   }
 }
 
