--- a/src/scss/_helper_classes.scss
+++ b/src/scss/_helper_classes.scss
@@ -36,7 +36,8 @@
   justify-content: flex-end;
 }
 
-.justify-space-between {
+.flex-justify-space-between {
+  display: flex;
   justify-content: space-between;
 }
 
