--- a/src/components/formElements/fileInput/_file-input.scss
+++ b/src/components/formElements/fileInput/_file-input.scss
@@ -32,6 +32,10 @@
   gap: 20px;
   margin-bottom: 12px;
 
+  @include max-size($small) {
+    flex-direction: column;
+  }
+
   .file-upload-label {
     display: flex;
     flex-direction: column;
@@ -85,6 +89,10 @@
     align-items: center;
     padding: 8px;
     border-radius: 4px;
+
+    @include max-size($small) {
+      flex-direction: column;
+    }
   }
 
   .preview-img {
