--- a/src/components/formElements/fileInput/_file-input.scss
+++ b/src/components/formElements/fileInput/_file-input.scss
@@ -105,9 +105,10 @@
 
   &.uploaded-img {
     flex-direction: row;
-    border: 1px solid $color-border;
-    padding: 20px;
-    gap: 24px;
+    border: 1px solid #e5e5e5;
+    padding: 12px;
+    gap: 12px;
+    justify-content: center;
 
     .preview-item {
       padding: 0;
