table classname prop

--- a/src/pages/product/_product-page.scss
+++ b/src/pages/product/_product-page.scss
@@ -1,5 +1,14 @@
 @use '../../scss/globals' as *;
 
+.product-table {
+  th,
+  td {
+    &:first-child {
+      width: rem(300px);
+    }
+  }
+}
+
 .product-overview-cell {
   display: flex;
   gap: 8px;
