--- a/src/pages/pageContainer/_page-container.scss
+++ b/src/pages/pageContainer/_page-container.scss
@@ -27,6 +27,11 @@
   width: 100%;
   padding: 24px;
 
+  &:has(table) {
+    max-height: fit-content;
+    overflow: inherit;
+  }
+
   @include max-size($medium) {
     max-height: 100%;
     padding: 12px;
