--- a/src/pages/product/_product-page.scss
+++ b/src/pages/product/_product-page.scss
@@ -14,7 +14,7 @@
   gap: 8px;
   align-items: center;
 
-  @include max-size($large) {
+  @include max-size($medium) {
     flex-direction: column;
     align-items: flex-start;
   }
