--- a/src/pages/product/_product-page.scss
+++ b/src/pages/product/_product-page.scss
@@ -44,7 +44,8 @@
   .product-size-list-item {
     background-color: $color-secondary;
     height: rem(40px);
-    width: rem(40px);
+    min-width: rem(40px);
+    padding: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
