--- a/src/pages/home/fashionGrid/_fashion-grid.scss
+++ b/src/pages/home/fashionGrid/_fashion-grid.scss
@@ -4,39 +4,70 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto auto;
+  gap: 20px;
+
+  img {
+    border-radius: 0;
+  }
 }
 
 .grid-item-1 {
   grid-row: span 2;
   background: #f1f1f1;
+  position: relative;
+  display: flex;
+
+  .caption-text {
+    position: absolute;
+    top: 101px;
+    right: 20px;
+    max-width: 400px;
+    padding: 30px;
+  }
+
+  h2 {
+    font-size: 60px;
+    line-height: 60px;
+  }
+
+  a {
+    width: 100%;
+    display: flex;
+    font-size: 16px;
+  }
 }
 
 .grid-flex {
   display: flex;
+  gap: 20px;
 }
 
 .grid-item-3,
 .grid-item-4 {
   flex: 1;
-
-  //   background: #f1f1f1;
 }
 
 .grid-item-2 {
-  background: #f1f1f1;
-
-  //   background: #faf0ef;
+  background-image: url('/images/home/test/men.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 30px 60px;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .grid-item-3 {
   background: #faf0ef;
+  background-image: url('/images/home/women.png');
+  background-size: 291px;
+  background-position: left bottom;
+  background-repeat: no-repeat;
 }
-
-// .grid-item-4 {
-//   background: #f1f1f1;
-// }
 
 .grid-item-4 {
   grid-column: 2;
   background: #bcd6da;
+  background-image: url('/images/home/test/kids1.png');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
