--- a/src/scss/globals/_colors.scss
+++ b/src/scss/globals/_colors.scss
@@ -22,6 +22,7 @@ $color-gray-80: #1e211d;
 $color-gray-90: #020101;
 
 // Light gray colors
+$color-light-gray: #f1f1f1;
 $color-light-gray-10: #fdfefe;
 $color-light-gray-20: #f9f9f9;
 $color-light-gray-30: #f4f4f5;
