--- a/src/layout/header/_header.scss
+++ b/src/layout/header/_header.scss
@@ -5,6 +5,10 @@
   justify-content: space-between;
   align-items: center;
 
+  &.container {
+    padding-bottom: 0;
+  }
+
   @include max-size($small) {
     flex-direction: column;
   }
