--- a/src/pages/home/_hero.scss
+++ b/src/pages/home/_hero.scss
@@ -1,24 +1,49 @@
 @use '../../scss/globals' as *;
 
 .hero {
-  background-color: $color-light-gray-40;
-  background-image: url('/images/fashion_fusion_banner1.png');
+  background-color: $color-light-gray;
+  background-image: url('/images/fashion_fusion_banner.png');
   background-size: cover;
   background-repeat: no-repeat;
   height: rem(372px);
+  padding-left: 130px;
+  margin-bottom: 32px;
 
-  h1::after {
-    display: none;
+  h1 {
+    font-family: $font-primary;
+
+    &::after {
+      display: none;
+    }
   }
 
   @include max-size($large) {
     height: auto;
   }
 
-  .container {
-    height: 100%;
+  .hero-content {
     display: flex;
-    justify-content: flex-end;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+    width: 100%;
+    max-width: rem(640px);
+    height: 100%;
+  }
+
+  .hero-title {
+    font-size: clamp($font-large, $clamp-val, $font-xlarge);
+    letter-spacing: 0;
+    margin-bottom: 0;
+  }
+
+  .hero-text {
+    font-size: clamp($font-medium, $clamp-val, rem(20px));
+    line-height: clamp($font-medium, $clamp-val, rem(32px));
+
+    p {
+      margin: 0;
+    }
   }
 
   .hero-btn-container {
@@ -38,32 +63,6 @@
     font-weight: bold;
     text-transform: uppercase;
     color: currentcolor;
-    min-width: rem(60px);
-  }
-
-  .hero-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 32px;
-    width: 100%;
-    max-width: rem(800px);
-    height: 100%;
-  }
-
-  .hero-title {
-    font-size: clamp($font-large, $clamp-val, $font-xlarge);
-    letter-spacing: 0;
-    margin-bottom: 0;
-  }
-
-  .hero-text {
-    max-width: rem(512px);
-    font-size: clamp($font-medium, $clamp-val, rem(20px));
-    line-height: clamp($font-medium, $clamp-val, rem(32px));
-
-    p {
-      margin: 0;
-    }
+    min-width: rem(80px);
   }
 }
