--- a/src/pages/home/fashionGrid/_fashion-grid.scss
+++ b/src/pages/home/fashionGrid/_fashion-grid.scss
@@ -26,8 +26,8 @@
   }
 
   h2 {
-    font-size: 60px;
-    line-height: 60px;
+    font-size: $font-xlarge;
+    line-height: $font-xlarge;
   }
 
   a {
