margin for heading

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -25,7 +25,7 @@ a[class^='btn-'],
   padding: 16px;
   border-radius: 4px;
   width: 100%;
-  border: 1px solid currentcolor;
+  border: 1px solid transparent;
   cursor: pointer;
   min-height: rem(60px);
   letter-spacing: rem(0.5px);
