--- a/src/scss/globals/_colors.scss
+++ b/src/scss/globals/_colors.scss
@@ -11,6 +11,7 @@ $color-red-10: #a0738f;
 $color-red-15: #b82845;
 $color-red-20: #88001b;
 $color-red-30: #793e5f;
+$color-red-40: #583247;
 
 // Gray colors
 $color-gray-20: #dbe0dc;
